--- a/Piggyvest.html
+++ b/Piggyvest.html
@@ -41,3 +41,6 @@
     
 </body>
 </html>
+git config --global user.email "kingogbimi1108@gmail.com"
+  git config --global user.name "daniel anthony ogbimi"
+  
